# albumentations-mcp

./: .gitignore  .pre-commit-config.yaml  COMMIT_MSG.md  README.md  TEST_FAILURES_REPORT.md  main.py  mcp-inspector-config.json  mcp-inspector-test-plan.md  mcp_test_results.json  pyproject.toml  pytest.ini
.kiro/: quality-checklist.md
.kiro/hooks/: check-existing-implementation.kiro.hook  code-quality-check.kiro.hook  code-refactoring-review.kiro.hook  create-regex-analysis.kiro.hook  file-summary-todo.kiro.hook  function-code-review.kiro.hook  kiro_hooks_fix_summary.md  post-implementation-review.kiro.hook  pre-implementation-check.kiro.hook  regex-security-check.kiro.hook  task-completion-commit.kiro.hook  test-hook.kiro.hook
.kiro/settings/: mcp.json
.kiro/specs/albumentations-mcp/: design.md  prompts.md  requirements.md  system.md  tasks.md  testing.md  tools.md
.kiro/steering/: product.md  structure.md  tech.md
config/: vlm.example.json  vlm.json
docs/: API.md  CHANGELOG.md  architecture.md  claude-desktop-config.json  contributing.md  design_philosophy.md  examples.md  kiro-mcp-config.json  mcp-config-examples.json  presets.md  purpose.md  regex_security_analysis.md  setup.md  troubleshooting.md  vlm_integration_mvp.md  vlm_nano_banana.md
examples/basic_images/: README.md
examples/cli_demo/: __main__.py  cli.py
examples/outputs_example/20250903_043413_bbc49558/analysis/: 20250903_043413_bbc49558_add blur_classification.json  20250903_043413_bbc49558_add blur_visual_eval.md
examples/outputs_example/20250903_043413_bbc49558/metadata/: 20250903_043413_bbc49558_add blur_metadata.json  20250903_043413_bbc49558_add blur_quality.json  20250903_043413_bbc49558_add blur_transforms.json  completion_manifest_bbc49558.json
examples/outputs_example/20250903_152934_354672f8/analysis/: 20250903_095934_354672f8_rotate_classification.json  20250903_095934_354672f8_rotate_visual_eval.md
examples/outputs_example/20250903_152934_354672f8/metadata/: 20250903_095934_354672f8_rotate_metadata.json  20250903_095934_354672f8_rotate_quality.json  20250903_095934_354672f8_rotate_transforms.json  completion_manifest_354672f8.json
examples/recipes_example/20250908_100721_domain_shift_8c889e8a30ec2f7b/: execution_plan.json  manifest.json  rationale.json  recipe.json
scripts/: post-task.sh  pre-task.sh  run_mcp_tests.bat  run_mcp_tests.sh  test_mcp_integration.py  vlm_smoke.py
src/: __init__.py  image_utils.py  parser.py  pipeline.py
src/albumentations_mcp/: __init__.py  __main__.py  config.py  errors.py  image_conversions.py  image_utils.py  parser.py  pipeline.py  presets.py  processor.py  recovery.py  seed_manager.py  server.py  utils.py  validation.py  verification.py
src/albumentations_mcp/demo/: __init__.py  __main__.py  cli.py
src/albumentations_mcp/hooks/: QUALITY_REVIEW.md  __init__.py  post_mcp.py  post_save.py  post_transform.py  post_transform_verify.py  pre_mcp.py  pre_save.py  pre_transform.py  utils.py
src/albumentations_mcp/utils/: __init__.py  async_utils.py  error_utils.py  file_utils.py  image_handler.py  logging_utils.py  memory_utils.py  seed_utils.py  singleton_utils.py  validation_utils.py
src/albumentations_mcp/vlm/: __init__.py  base.py  config.py  google_gemini.py
src/hooks/: __init__.py  post_mcp.py  pre_mcp.py
tests/: __init__.py  test_cli_demo.py  test_config.py  test_errors.py  test_file_path_support.py  test_hook_system_integration.py  test_hooks_integration.py  test_image_utils.py  test_individual_hooks.py  test_input_normalization.py  test_integration_verification.py  test_integration_verification_report.md  test_integration_verification_simple.py  test_mcp_client_integration.py  test_parser.py  test_processor.py  test_recovery.py  test_reproducibility.py  test_resources_and_prompts.py  test_simple_hooks.py  test_utils.py  test_validation.py  test_vlm_apply_mvp.py  test_vlm_recipe_execute_e2e.py  test_vlm_suggest_recipe.py
