[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "albumentations-mcp"
version = "0.1.0"
description = "MCP-compliant image augmentation server using Albumentations"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Albumentations MCP Team", email = "support@albumentations-mcp.com"},
]
keywords = ["mcp", "albumentations", "computer-vision", "image-augmentation", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "albumentations>=2.0.8",
    "mcp>=1.12.3",
    "pillow>=11.3.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "flake8>=7.3.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
albumentations-mcp = "albumentations_mcp:main"

[project.urls]
Homepage = "https://github.com/albumentations-team/albumentations-mcp"
Repository = "https://github.com/albumentations-team/albumentations-mcp"
Documentation = "https://albumentations-mcp.readthedocs.io"
Issues = "https://github.com/albumentations-team/albumentations-mcp/issues"

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
